package com.example.justy.DataFromSensors;

public class GlobalVariables {
//

//    public final static PostRequest postRequestPerDay = new PostRequest();
//
//    //    public static ParseJSON parseJSON = new ParseJSON();
//    public final static PostRequest postRequestPerWeek = new PostRequest();
//
//
//    public final static PostRequest postRequestPerMonth = new PostRequest();
//
//    public final static PostRequest postRequestPerYear = new PostRequest();


    public static String currentColumn;

    public static Long currentTimestamp;

    public static int currentTab;

    public static String currentStation;


}
